# chat-llm

./: .gitignore  Cargo.toml  README.md
config/: config.yaml
examples/: bubble_demo.rs  dialogue_demo.rs
examples/tui/: mod.rs
src/: app.rs  config.rs  handler.rs  lib.rs  main.rs  ui.rs  util.rs
src/component/: bubble.rs  dialogue.rs  mod.rs  util.rs
src/data/: conversation.rs  mod.rs
src/llm/: base.rs  mock.rs  mod.rs
