[package]
name = "chat-llm"
version = "0.1.0"
authors = ["hxqmicro <hxqmicro@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
chrono = "0.4.33"
config = { version = "0.13.4", features = ["yaml"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures = "0.3.30"
human-panic = "1.2.3"
ratatui = "0.25.0"
tokio = { version = "1.35.1", features = ["full"] }
serde = { version = "1.0.195", features = ["derive"] }
once_cell = "1.19.0"
tui-textarea = "0.4.0"
